--- a/index.html
+++ b/index.html
@@ -185,12 +185,12 @@
 
 </section>
 
-<div href="descargar" id="descargar" style="display: flex;justify-content: center;align-items: center;">
+<div href="descargar" id="descargar">
 				<div class="row">
 					<div class="col s12 m6">
 						<div class="row">
-						<div class="col s12 col m3">
-							<a class="button" href="#" style="color: white;background: #ed1555;padding: 12px 30px;display: block;margin: auto;color: white;border-radius: 24px;font-size: 16px;width: 160px;margin-top: 5px;text-align: center;">
+							<div class="col s12 col m3">
+								<a class="button" href="#" style="color: white;background: #ed1555;padding: 12px 30px;display: block;margin: auto;color: white;border-radius: 24px;font-size: 16px;width: 160px;margin-top: 5px;text-align: center;">
 								<i class="fab fa-google-play" style="width: 20px;height: 20px; color: white"></i> Play Store</a>
 						</div>
 						<div class="col s12 col m3">
@@ -200,9 +200,9 @@
 					</div>
 					</div>
 					<div class="col s12 col m6">
-					<div class="section">
-						<h1>Descarga</h1>
-					</div>
+						<div class="section">
+							<h1>Descarga</h1>
+						</div>
 				</div>
 			</div>
 </div>
