--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
 </section>
 
-<div href="descargar" id="descargar">
+<div href="descargar" id="descargar" class="container">
 				<div class="row">
 					<div class="col s12 m6">
 						<div class="row">
