--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 </section>
 
 <div href="descargar" id="descargar" class="container">
-				<div class="row">
+				<div class="row" style="margin-bottom:0 !important;">
 					<div class="col s12 m6">
 						<div class="row">
 							<div class="col s12 col m6">
