--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<title>GuiApp</title>
 		<!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 
 		<style>
@@ -201,7 +202,7 @@
 					</div>
 					<div class="col s12 col m6">
 						<div class="section">
-							<h1>Descarga</h1>
+							<h1 style="color:white">Descarga</h1>
 						</div>
 				</div>
 			</div>
@@ -233,6 +234,8 @@
 
 		<script src="js/jquery-3.3.1.min.js" > </script>
 		<!-- Compiled and minified JavaScript -->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
 		<script>
 		$(document).ready(function(){
