--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
 </section>
 
-<div href="descargar" id="descargar" class="container">
+<div href="descargar" id="descargar">
 				<div class="row" style="margin-bottom:0 !important;">
 					<div class="col s12 m3">
 								<a class="button" href="#" style="color: white;background: #ed1555;padding: 12px 30px;display: block;margin: auto;color: white;border-radius: 24px;font-size: 16px;width: 160px;margin-top: 5px;text-align: center;">
@@ -196,9 +196,7 @@
 							<i class="fab fa-app-store-ios" style="width: 20px;height: 20px; color: white"></i> App Store</a>
 					</div>
 					<div class="col s12 col m6">
-						<div class="section">
-							<h1 style="color:white">Descarga</h1>
-						</div>
+							<p style="color:white">Descarga</p>
 					</div>
 			</div>
 </div>
