--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	<body>
 		<nav class="white" style="border-bottom: solid 2px #fb9803;">
     <div class="nav-wrapper">
-      <a href="#" class="brand-logo"><img style="width: 178px;" src="img/logo-eduinicial.gif"/></a>
+      <a href="#" class="brand-logo"><img style="width: 178px;margin-top: 6px;margin-left: 30px;" src="img/logo-eduinicial.gif"/></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="#">Inicio</a></li>
         <li><a href="#">Funciones</a></li>
