--- a/index.html
+++ b/index.html
@@ -189,15 +189,15 @@
 	<div class="container">
 
 				<div class="row valign-wrapper" style="margin-bottom:0 !important;">
-					<div class="col s12 m3">
+					<div class="col s12 m3 valign">
 								<a class="button" href="#" style="color: white;background: white;padding: 12px 30px;display: block;margin: auto;color: #624195;border-radius: 24px;font-size: 16px;width: 160px;margin-top: 38px;text-align: center;">
 								<i class="fab fa-google-play" style="width: 20px;height: 20px; color: white"></i> Play Store</a>
 					</div>
-					<div class="col s12 col m3">
+					<div class="col s12 col m3 valign">
 							<a class="button" href="#" style="color: white;background: white;padding: 12px 30px;display: block;margin: auto;color: #624195;border-radius: 24px;font-size: 16px;width: 160px;margin-top: 38px;text-align: center;">
 							<i class="fab fa-app-store-ios" style="width: 20px;height: 20px; color: white"></i> App Store</a>
 					</div>
-					<div class="col s12 col m6">
+					<div class="col s12 col m6 valign">
 							<p style="color: white;text-align: center;font-size: 35px;">Descarga</p>
 					</div>
 			</div>
