--- a/index.html
+++ b/index.html
@@ -187,8 +187,7 @@
 
 <div href="descargar" id="descargar" style="background:#634195;">
 	<div class="container">
-
-				<div class="row valign-wrapper" style="margin-bottom:0 !important; height:400px;">
+				<div class="row" style="margin-bottom:0 !important; height:400px;">
 					<div class="col s12 m3 valign">
 								<a class="button" href="#" style="color: white;background: white;padding: 12px 30px;display: block;margin: auto;color: #624195;border-radius: 24px;font-size: 16px;width: 160px;margin-top: 38px;text-align: center;">
 								<i class="fab fa-google-play" style="width: 20px;height: 20px; color: white"></i> Play Store</a>
