--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
     color: #fb9803 !important;
 	}
 
+	@media only screen and (max-width: 600px) {
+    #descargar {
+        background-color: lightblue;
+    }
+}
+
 </style>
 	</head>
 	<body>
@@ -188,7 +194,7 @@
 
 <div href="descargar" id="descargar" style="background:#634195;">
 	<div class="container">
-				<div class="row valign-wrapper" style="margin-bottom:0 !important; height:250px;">
+				<div id="descargar" class="row valign-wrapper" style="margin-bottom:0 !important; height:250px;">
 					<div class="col s12 m3">
 								<a class="button" href="#" style="color: white;background: white;padding: 12px 30px;display: block;margin: auto;color: #624195;border-radius: 24px;font-size: 16px;width: 160px;margin-top: 38px;text-align: center;">
 								<i class="fab fa-google-play" style="width: 20px;height: 20px; color: white"></i> Play Store</a>
