--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 	@media only screen and (max-width: 600px) {
     #descargar {
-        background-color: lightblue;
+        display: grid;
     }
 }
 
@@ -196,11 +196,11 @@
 	<div class="container">
 				<div id="descargar" class="row valign-wrapper" style="margin-bottom:0 !important; height:250px;">
 					<div class="col s12 m3">
-								<a class="button" href="#" style="color: white;background: white;padding: 12px 30px;display: block;margin: auto;color: #624195;border-radius: 24px;font-size: 16px;width: 160px;margin-top: 38px;text-align: center;">
+								<a class="button" href="#" style="color: white;background: white;padding: 12px 30px;display: block;margin: auto;color: #624195;border-radius: 24px;font-size: 16px;width: 160px;margin-top: 10px;text-align: center;">
 								<i class="fab fa-google-play" style="width: 20px;height: 20px; color: white"></i> Play Store</a>
 					</div>
 					<div class="col s12 col m3">
-							<a class="button" href="#" style="color: white;background: white;padding: 12px 30px;display: block;margin: auto;color: #624195;border-radius: 24px;font-size: 16px;width: 160px;margin-top: 38px;text-align: center;">
+							<a class="button" href="#" style="color: white;background: white;padding: 12px 30px;display: block;margin: auto;color: #624195;border-radius: 24px;font-size: 16px;width: 160px;margin-top: 10px;text-align: center;">
 							<i class="fab fa-app-store-ios" style="width: 20px;height: 20px; color: white"></i> App Store</a>
 					</div>
 					<div class="col s12 col m6">
