--- a/index.html
+++ b/index.html
@@ -195,17 +195,24 @@
 <div href="descargar" id="descargar" style="background:#634195;">
 	<div class="container">
 				<div id="descargar" class="row valign-wrapper" style="margin-bottom:0 !important; height:250px;">
-					<div class="col s12 m3">
-								<img src="img/apple.svg" alt="">
+					<div class="col s12 m3 col m6">
+						<img src="img/apple.svg" alt="" width="200px" height="180px" style="display:block;margin:auto">
 					</div>
-					<div class="col s12 col m3">
-							<img src="img/play.svg" alt="">
+					<div class="col s12 col m3 col m6">
+							<img src="img/play.svg" alt="" width="200px" height="200px" style="display:block;margin:auto">
 					</div>
 					<div class="col s12 col m6">
-							<p style="color: white;text-align: center;font-size: 35px;">Descarga</p>
+							<p style="color: white;text-align: center;font-size: 35px;"style="display:block;margin:auto">Descarga</p>
 					</div>
 			</div>
 			</div>
+
+		<!-- <div class="col s12 col m3">
+					<a class="button" href="#" style="color: white;background: white;display: block;margin: auto;color: #624195;border-radius: 24px;font-size: 16px;width: 160px;margin-top: 10px;text-align: center;">
+					<i class="fab fa-app-store-ios" style="width: 20px;height: 20px; color: white"></i> App Store</a>
+			</div> -->
+
+
 </div>
 
 <footer class="page-footer orange">
