--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <li><a href="#funciones">Funciones</a></li>
         <li><a href="#descargar">Descarga</a></li>
       </ul>
-			<a href="#" class=""><img  class="right" src="img/logo.png" style="width: 50px;margin-right: 10px;" /></a>
+			<a href="#" class=""><img  class="right" src="res/simg/logo.png" style="width: 50px;margin-right: 10px;" /></a>
     </div>
   </nav>
 <div id="inicio" class="slider">
@@ -69,7 +69,7 @@
 		 <div class="caption center-align">
 			 <h3>G U I A P P </h3>
 			 <h6 class="light grey-text text-lighten-3">Es la plataforma digital gratuita que el programa de Educación Inicial FCS ha desarrollado para la comunidad de padres, educadores y personal de salud comprometidos con el desarrollo de las niñas y los niños durante su primera infancia. Guiapp te ofrece conocimientos de vanguardia, actividades y buenas prácticas para que tu tarea como, padre de familia, educador o adulto responsable se convierta en una de las mejores experiencias de tu vida.</h6>
-			 <div style="width: 100%;height: 250px;background: rgb(255, 255, 255);opacity: 0.3 !important;border-radius: 10px;padding: 7px;position: absolute;top: 0px;z-index: -1;"></div>
+			 <div style="width: 100%;height: 250px;background: rgb(0,0,0);opacity: 0.2 !important;border-radius: 10px;padding: 7px;position: absolute;top: 0px;z-index: -1;"></div>
 		</div>
 	 </li>
 	 <li>
@@ -77,7 +77,7 @@
 		 <div class="caption left-align">
 			 <h3>Titulo</h3>
 			 <h5 class="light grey-text text-lighten-3">Descripción.</h5>
-			 <div style="width: 100%;height: 250px;background: rgb(255, 255, 255);opacity: 0.3 !important;border-radius: 10px;padding: 7px;position: absolute;top: 0px;z-index: -1;"></div>
+			 <div style="width: 100%;height: 250px;background: rgb(0,0,0);opacity: 0.2 !important;border-radius: 10px;padding: 7px;position: absolute;top: 0px;z-index: -1;"></div>
 		 </div>
 	 </li>
 	 <li>
@@ -85,7 +85,7 @@
 		 <div class="caption right-align">
 			 <h3>Titulo</h3>
 			 <h5 class="light grey-text text-lighten-3">Descripción.</h5>
-			 <div style="width: 100%;height: 250px;background: rgb(255, 255, 255);opacity: 0.3 !important;border-radius: 10px;padding: 7px;position: absolute;top: 0px;z-index: -1;"></div>
+			 <div style="width: 100%;height: 250px;background: rgb(0,0,0);opacity: 0.2 !important;border-radius: 10px;padding: 7px;position: absolute;top: 0px;z-index: -1;"></div>
 		 </div>
 	 </li>
  	</ul>
